# monad-parser-combinators

./: README.org  monadic-parser-combinators.cabal
lib/: ExprParser.hs  LambdaParser.hs  MonadicParserCombinators.hs  OnsideLambdaExprParser.hs  OnsideParser.hs  ParserCombinators.hs
test/: ExprParserTest.hs  Main.hs  MonadicParserCombinatorsTest.hs  OnsideLambdaExprParserTest.hs
