cabal-version:      3.0
name:               monadic-parser-combinators
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    
    exposed-modules:  ParserCombinators, ExprParser, LambdaParser, MonadicParserCombinators, OnsideParser, OnsideLambdaExprParser

    build-depends:    base ^>=4.20.0.0

    hs-source-dirs:   lib


    default-language: GHC2024

executable monadic-parser-combinators
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base ^>=4.20.0.0,
        monadic-parser-combinators

    hs-source-dirs:   app

    default-language: GHC2024

test-suite monadic-parser-combinators-test
    import:           warnings

    default-language: GHC2024

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    other-modules: ExprParserTest, MonadicParserCombinatorsTest, OnsideLambdaExprParserTest

    build-depends:
        base ^>=4.20.0.0,
        monadic-parser-combinators,
        HUnit
